--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,7 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "NEXTAUTH_URL": {
-      "development": "http://localhost:3000",
-      "production": "https://your-production-url.vercel.app"
-    }
-  },
-  "build": {
-    "env": {
-      "NEXTAUTH_SECRET": "@nextauth-secret"
-    }
+    "NEXTAUTH_URL": "https://beast-theta.vercel.app/",
+    "NEXTAUTH_SECRET": "@nextauth_secret"
   }
 }
