--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "NEXTAUTH_URL": "https://beast-theta.vercel.app/",
-    "NEXTAUTH_SECRET": "@nextauth_secret"
-  }
+  "regions": ["iad1"]
 }
