--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "phaser": "^3.90.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
