--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "prisma generate && next build",
     "postbuild": "node scripts/postbuild.js",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
@@ -39,6 +40,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "husky": "^9.1.7",
     "postcss": "^8.4.35",
     "prisma": "^6.8.2",
     "tailwindcss": "^3.4.1",
